# maxtime

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
src/: main.rs
