[package]
name = "maxtime"
version = "0.4.0"
edition = "2021"
authors = ["Tim Hutt <tdhutt@gmail.com>"]
description = "Find the maximum mtime in a directory."
license = "MIT"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.2.7", features = ["derive"] }
filetime = "0.2.21"
ignore = "0.4.20"
time = { version = "0.3.21", features = ["formatting"] }

[dev-dependencies]
assert_cmd = "2.0.11"
rand = "0.8.5"
tempfile = "3.5.0"

[profile.release]
codegen-units = 1
strip = "symbols"
lto = "thin"
